# AutOps

./: .env.example  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  mypy_errors.txt  pyproject.toml
.github/workflows/: ci-cd.yml
benchmarks/: locustfile.py
config/: production.env  staging.env
docs/: CREDENTIALS_SETUP.md  DEPLOYMENT.md  SLACK_APP_SETUP.md
k8s/: datadog-agent.yaml  deployment.yaml
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: autops-alerts.json  autops-overview.json
scripts/: deploy.sh  dev.sh  setup-secrets.sh  validate-deps.py  verify-formatting.py
security/: policy.yaml
src/autops/: __init__.py  config.py  main.py
src/autops/agents/: __init__.py  information_retrieval_agent.py  planning_agent.py  query_understanding_agent.py  response_generation_agent.py  tool_execution_agent.py  verification_agent.py
src/autops/api/: __init__.py  webhooks.py
src/autops/mcp/: __init__.py  datadog_server.py
src/autops/tools/: __init__.py  datadog_client.py  github_client.py  gitlab_client.py  pagerduty_client.py  slack_client.py
src/autops/utils/: __init__.py  database.py  exceptions.py  logging.py
tests/: __init__.py  conftest.py  test_comprehensive.py
tests/integration/: test_agent_orchestration.py  test_slack_integration.py
tests/unit/: test_planning_agent.py  test_query_understanding_agent.py  test_tool_execution_agent.py
